Bug 1312485: array: Don't optimize for dense storage if the elements are frozen. r=nbp

We're going to throw right away in most cases anyway.

MozReview-Commit-ID: 7YxAybEP1UQ